--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
     </form>
   </div>
 </div>
+<script>
+  function openPopup() {
+    document.getElementById("contactPopup").style.display = "flex";
+  }
+
+  function closePopup() {
+    document.getElementById("contactPopup").style.display = "none";
+  }
+</script>
 
 </body>
 </html>
