--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
     <h2>Contact Us</h2>
     <p>Let’s build something amazing 🚀</p>
 
-    <form>
+<form action="https://formspree.io/f/mzdbzoza" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="email" placeholder="Your Email" required>
+  <textarea name="message" placeholder="Your Message" required></textarea>
+  <button type="submit">Send Message</button>
+</form>
       <input type="text" placeholder="Your Name" required>
       <input type="email" placeholder="Your Email" required>
       <textarea placeholder="Your Message" required></textarea>
