--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
   <input type="text" name="name" placeholder="Your Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
   <textarea name="message" placeholder="Your Message" required></textarea>
+  <input type="hidden" name="_subject" value="New Contact Message">
+<input type="hidden" name="_captcha" value="false">
+<input type="hidden" name="_redirect" value="https://the4planers.github.io/.co/">
+
   <button type="submit">Send Message</button>
 
     </form>
