--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
   <button type="submit">Send Message</button>
 
     </form>
-  </div>
+<!-- Success Message -->
+<div id="successMessage" class="success-message">
+  ✔️ Message Sent Successfully!
+</div>
 </div>
 <script>
   function openPopup() {
